# enclave-apps

./: .gitignore  LICENSE  README.md
IRC/: Cargo.toml  README.md
IRC/src/: main.rs  message.rs  server.rs
IRC/test/: smoke.py
anima/: Cargo.toml  README.md
anima/emu/: Cargo.toml
anima/emu/src/: cpu.rs  memory.rs  mmu.rs
anima/emu/src/device/: virtio_block_disk.rs
anima/scripts/: bench.py  seed-machine.py
anima/src/: httpd.rs  index.html  main.rs  s3.rs
backchannel/: Cargo.toml  README.md
backchannel/src/: httpd.rs  main.rs  ui.html
ballot/: Cargo.toml  README.md
ballot/src/: main.rs  ui.html
dead-drop/: Cargo.toml  README.md
dead-drop/src/: httpd.rs  main.rs  sha256.rs  ui.html
encrypted-volumes/: Cargo.toml  README.md
encrypted-volumes/src/: bindings.rs  index.html  lib.rs
encrypted-volumes/wit/: world.wit
failsafe/: Cargo.toml  README.md
failsafe/src/: main.rs  ui.html
fairdraw/: Cargo.toml  README.md
fairdraw/src/: httpd.rs  main.rs  ui.html
gavel/: Cargo.toml  README.md
gavel/src/: main.rs  ui.html
ggml-probe/: Cargo.toml
ggml-probe/src/: bindings.rs  lib.rs
ggml-probe/wit/: world.wit
golem/: Cargo.toml  README.md
golem/scripts/: fetch-machine.sh  mock-manager.py
golem/src/: index.html  lib.rs
handoff/: Cargo.toml  README.md
handoff/src/: main.rs  ui.html
hello-world/: Cargo.toml
hello-world/src/: lib.rs
hookbin/: Cargo.toml  README.md
hookbin/src/: httpd.rs  main.rs  ui.html
image-generator/: .gitignore  Cargo.toml  README.md  fetch-model.sh
image-generator/assets/: app-config.json
image-generator/src/: app.rs  bindings.rs  config.rs  lib.rs  pipeline.rs  ui.html
image-generator/tools/: merge-lightning.sh  merge_lora.py
image-generator/wit/: world.wit
keep/: Cargo.toml  README.md
keep/src/: index.html  lib.rs
llm-chat/: Cargo.toml  fetch-model.sh
llm-chat/assets/: app-config.json  deploy-config.template.json
llm-chat/src/: bindings.rs  chat.html  config.rs  lib.rs
minecraft-server/: Cargo.toml  README.md
minecraft-server/assets/: app-config.json
minecraft-server/src/: main.rs  proto.rs  server.rs  world.rs
minecraft-server/test/: smoke.py  walk.py
network-test/: Cargo.toml  README.md  dev-run.mjs
network-test/src/: main.rs
nn-demo/src/: bindings.rs  lib.rs
pixelboard/: Cargo.toml  README.md
pixelboard/src/: main.rs  ui.html
pulse/: Cargo.toml  README.md
pulse/src/: main.rs  ui.html
quorum/: Cargo.toml  README.md
quorum/src/: main.rs  ui.html
risc-box/: Cargo.toml  README.md
risc-box/emu/: Cargo.toml
risc-box/emu/src/: cpu.rs  lib.rs  memory.rs  mmu.rs  net.rs
risc-box/emu/src/device/: dtb.dtb  dtb.dts  mod.rs  plic.rs  virtio_block_disk.rs  virtio_net.rs
risc-box/scripts/: bench.py  seed-machine.py
risc-box/src/: display.rs  index.html  main.rs  net.rs  s3.rs
shoebox/: Cargo.toml  README.md
shoebox/src/: index.html  lib.rs
tipline/: Cargo.toml  README.md
tipline/src/: main.rs  ui.html
tripwire/: Cargo.toml  README.md
tripwire/src/: main.rs  ui.html
vault/src/: bindings.rs
warpad/: Cargo.toml  README.md
warpad/src/: main.rs  ui.html
yardstick/: Cargo.toml  README.md
yardstick/src/: main.rs  ui.html
