[package]
name = "hookbin"
version = "0.1.0"
edition = "2021"
description = "Webhook/request inspector — point anything at a capture URL and watch what it sent, live; payloads stay in attested-enclave RAM and are never persisted"

# Zero dependencies on purpose, like the suite's other service apps: the
# HTTP engine, SSE, and base64 are hand-rolled std. What runs is what you
# read.
[dependencies]

[profile.release]
opt-level = "s"
lto = true
strip = true
