[package]
name = "image-generator"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }
serde = { version = "1", features = ["derive"] }
# preserve_order: the `models` catalog is a JSON object keyed by volume, and
# its written order is the UI/catalog order (and the default tie-break)
serde_json = { version = "1", features = ["preserve_order"] }
# PNG encoding (pure Rust: flate2 defaults to miniz_oxide, wasm32-clean).
png = "0.17"

[profile.release]
codegen-units = 1
opt-level = 3        # per-pixel PNG encode (filter+deflate over w*h*3 bytes)
strip = true
lto = true

[package.metadata.component]
package = "enclave:image-generator"

[package.metadata.component.target]
path = "wit"
world = "image-generator"

# WIT deps vendored from wasmtime v45 (see wit/world.wit)
[package.metadata.component.target.dependencies]
"wasi:nn" = { path = "wit/deps/nn" }
"wasi:http" = { path = "wit/deps/http" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:clocks" = { path = "wit/deps/clocks" }
