[package]
name = "quorum"
version = "0.1.0"
edition = "2021"
description = "M-of-N approval release for secrets — browser-side AES-GCM, key in the URL fragment, the two-person rule counted by attested code holding RAM-only ciphertext"

# Zero dependencies on purpose, like the suite's other service apps: the
# HTTP engine, SSE, and SHA-256 are hand-rolled std. What runs is what you
# read.
[dependencies]

[profile.release]
opt-level = "s"
lto = true
strip = true
